--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "vue-scrollto": "^2.18.1"
   },
   "devDependencies": {
     "gridsome-plugin-tailwindcss": "^3.0.1"
