--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/plugin-sitemap": "^0.4.0",
     "gridsome": "^0.7.0",
     "vue-scrollto": "^2.18.1"
   },
